:lipstick: fix: overflow-x carousel | icon page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,3 +117,7 @@ body {
     min-width: 100vw;
     min-height: 100vh;
 }
+
+.carousel{
+    overflow-x: hidden;
+}
